--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -117,12 +117,12 @@ body {
 }
 
 ::selection {
-  background: #0071f8;
+  background: #10344D;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #0071f8;
+  background: #10344D;;
   color: #fff;
 }
 
@@ -144,11 +144,11 @@ body {
 
 .section-heading h2 em {
   font-style: normal;
-  color: #0071f8;
+  color: #10344D;
 }
 
 .section-heading h6 {
-  color: #021825;
+  color: #10344D;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
@@ -156,7 +156,7 @@ body {
 
 .icon-button a {
   display: inline-block;
-  background-color: #1e1e1e;
+  background-color: #10344D;
   color: #fff;
   font-size: 14px;
   font-weight: 400;
@@ -168,7 +168,7 @@ body {
 }
 
 .icon-button a i {
-  background-color: #011d3a;
+  background-color: #10344D;
   height: 50px;
   width: 50px;
   text-align: center;
@@ -180,7 +180,7 @@ body {
 }
 
 .icon-button a:hover {
-  color: #002639;
+  color: #10344D;
 }
 
 .icon-button a:hover i {
@@ -189,7 +189,7 @@ body {
 
 .main-button a {
   display: inline-block;
-  background-color: #1e1e1e;
+  background-color: #10344D;
   color: #fff;
   font-size: 14px;
   font-weight: 500;
@@ -201,8 +201,9 @@ body {
 }
 
 .main-button a:hover {
-  background-color: #f35525;
+  background-color: #C8AA62;
   color: #fff;
+  
 }
 
 /* 
@@ -221,18 +222,18 @@ carousel timer
   display: inline-block;
   margin-top: 20px;
   padding: 10px 20px;
-  background-color: #001f4d; /* Dark blue */
-  color: gold;
-  border: 2px solid gold;
+  background-color: #10344D;/* Dark blue */
+  color: #C8AA62;
+  border: 2px solid #C8AA62;
   text-decoration: none;
   font-weight: bold;
   transition: all 0.3s ease;
 }
 
 .find-out-more:hover {
-  background-color: gold;
-  color: #001f4d;
-  border-color: #001f4d;
+  background-color: #C8AA62;
+  color: #10344D;
+  border-color: #10344D;
 }
 
 
@@ -309,7 +310,7 @@ Pre-loader Style
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #f35525;
+  background: #C8AA62;
   border-radius: 50%;
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -332,7 +333,7 @@ Pre-loader Style
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #f35525;
+  background: #C8AA62;
   border-radius: 50%;
 }
 
@@ -344,8 +345,79 @@ Header Style
 --------------------------------------------- 
 */
 
+
 .sub-header {
+  background-color: #10344D;
+  width: 100%;
+  padding: 10px 0;
+  font-family: 'Poppins', sans-serif;
+  color: #fff;
+  font-size: 14px;
+}
+
+.info,
+.social-links {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.info li {
+  display: inline-block;
+  margin-right: 20px;
+  color: #fff;
+}
+
+.info i {
+  color: #C8AA62; /* Deep gold icons */
+  margin-right: 8px;
+}
+
+.social-links {
+  display: flex;
+  justify-content: flex-end;
+  gap: 12px;
+}
+
+.social-links li {
+  display: inline-block;
+}
+
+.social-links a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #C8AA62;
+  color: #10344D;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 14px;
+  transition: 0.3s ease;
+}
+
+.social-links a:hover {
   background-color: #fff;
+  color: #C8AA62;
+  border: 1px solid #C8AA62;
+}
+
+@media (max-width: 768px) {
+  .info li {
+    display: block;
+    margin-bottom: 6px;
+  }
+
+  .social-links {
+    justify-content: flex-start;
+    margin-top: 10px;
+  }
+}
+
+
+.sub-header {
+  background-color: #10344D;
   padding: 10px 0px;
   border-bottom: 1px solid #eee;
 }
@@ -378,7 +450,7 @@ Header Style
 }
 
 .sub-header ul.social-links li a:hover {
-  background-color: #f35525;
+  background-color: #C8AA62;
 }
 
 .sub-header ul.info li {
@@ -397,7 +469,7 @@ Header Style
 
 .sub-header ul.info li i {
   font-size: 20px;
-  color: #f35525;
+  color: #C8AA62;
   margin-right: 8px;
 }
 
@@ -443,7 +515,7 @@ Header Style
   line-height: 100px;
   font-size: 20px;
   text-transform: uppercase;
-  color: #1e1e1e;
+  color: #10344D;
   font-weight: 700;
   letter-spacing: 0px;
 }
@@ -484,7 +556,7 @@ Header Style
   height: 40px;
   line-height: 40px;
   text-transform: capitalize;
-  color: #1e1e1e;
+  color: #10344D;
   -webkit-transition: all 0.4s ease 0s;
   -moz-transition: all 0.4s ease 0s;
   -o-transition: all 0.4s ease 0s;
@@ -494,7 +566,7 @@ Header Style
 }
 
 .header-area .main-nav .nav li:last-child a {
-  background-color: #1e1e1e;
+  background-color: #10344D;
   color: #fff;
   font-size: 14px;
   font-weight: 400;
@@ -504,7 +576,7 @@ Header Style
 }
 
 .header-area .main-nav .nav li:last-child a i {
-  background-color: #001b43;
+  background-color: #10344D;
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -516,7 +588,7 @@ Header Style
 }
 
 .header-area .main-nav .nav li:last-child:hover a {
-  background-color: #1e1e1e;
+  background-color: #10344D;
 }
 
 .header-area .main-nav .nav li:last-child:hover a i {
@@ -524,16 +596,16 @@ Header Style
 }
 
 .header-area .main-nav .nav li:hover a {
-  color: #b55b00;
+  color: #C8AA62;
 }
 
 .header-area .main-nav .nav li a.active {
-  color: #001941;
+  color: #10344D;
 }
 
 
 .background-header .main-nav .nav li a.active {
-  color: #001646;
+  color: #10344D;
 }
 
 .header-area .main-nav .menu-trigger {
@@ -563,7 +635,7 @@ Header Style
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #1e1e1e;
+  background-color: #10344D;
   display: block;
   position: absolute;
   width: 30px;
@@ -636,11 +708,11 @@ Header Style
   -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  background-color: #1e1e1e;
+  background-color: #10344D;
 }
 
 .background-header .main-nav .menu-trigger.active span:after {
-  background-color: #1e1e1e;
+  background-color: #10344D;
 }
 
 .visible{
@@ -703,7 +775,7 @@ Header Style
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #001b43!important;
+    color: #10344D;!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -799,7 +871,7 @@ Banner Style
 
 .main-banner .item span.category em {
   font-style: normal;
-  color: #f35525;
+  color: #C8AA62;
 }
 
 .main-banner .item h2 {
@@ -828,7 +900,7 @@ Banner Style
 }
 
 .main-banner .owl-dots .active {
-  background-color: #f35525;
+  background-color: #C8AA62;
 }
 
 .main-banner .owl-nav {
@@ -889,7 +961,7 @@ Featured Style
   width: 110px;
   height: 110px;
   line-height: 110px;
-  background-color: #001a3b;
+  background-color: #10344D;;
   border-radius: 50%;
   text-align: center;
   position: absolute;
@@ -929,7 +1001,7 @@ Featured Style
 }
 
 .featured .accordion-button:not(.collapsed) {
-  color: #003661;
+  color: #10344D;
   background-color: #fafafa;
   outline: none;
 }
@@ -1006,7 +1078,7 @@ Video Style
 
 .video-content .video-frame {
   position: relative;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 15px #10344D;
   border-radius: 10px;
 }
 
@@ -1026,8 +1098,8 @@ Video Style
   display: inline-block;
   text-align: center;
   line-height: 52px;
-  color: #f35525;
-  outline: 15px solid rgba(254, 85, 37, 0.5);
+  color: #C8AA62;
+  outline: 15px solid #C8AA62;
   font-size: 18px;
 }
 
@@ -1098,7 +1170,7 @@ Video Style
 
 .stat-icon {
   font-size: 40px;
-  color: #001429;
+  color: #10344D;;
   margin-bottom: 15px;
 }
 
@@ -1153,14 +1225,14 @@ Fun Facts Style
 .fun-facts .counter h2 {
   margin-right: 25px;
   font-size: 40px;
-  color: #f35525;
+  color: #C8AA62;
 }
 
 .fun-facts .counter:after {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #f35525;
+  background-color: #C8AA62;
   border-radius: 50%;
   content: '';
   right: -25px;
@@ -1186,7 +1258,7 @@ Best Deal Style
 .best-deal .tabs-content .nav-link {
   font-size: 16px;
   font-weight: 500;
-  background-color: #1e1e1e !important;
+  background-color: #10344D; important;
   border-radius: 5px;
   height: 50px;
   line-height: 50px;
@@ -1196,7 +1268,7 @@ Best Deal Style
 }
 
 .best-deal .tabs-content .nav-tabs .nav-link.active {
-  background-color: #f35525 !important;
+  background-color: #C8AA62;
   color: #fff;
 }
 
@@ -1239,7 +1311,7 @@ Best Deal Style
 
 .best-deal .info-table ul li span {
   font-size: 20px;
-  color: #1e1e1e;
+  color: #10344D;
   font-weight: 700;
   float: right;
   display: inline-block;
@@ -1296,7 +1368,7 @@ Properties Style
   position: absolute;
   bottom: 0;
   width: 100%;
-  background: rgba(145, 183, 243, 0.75);
+  background: #C8AA62;
   color: #fff;
   text-align: center;
   padding: 20px 10px;
@@ -1313,7 +1385,7 @@ Properties Style
   display: inline-block;
   padding: 8px 20px;
   border-radius: 20px;
-  background-color: #ffb400;
+  background-color:#C8AA62;
   color: #fff;
   font-weight: 600;
   text-decoration: none;
@@ -1321,7 +1393,7 @@ Properties Style
 }
 
 .see-more:hover {
-  background-color: #ffa500;
+  background-color: #C8AA62;
   transform: scale(1.05);
 }
 
@@ -1472,7 +1544,7 @@ Contact Style
 }
 
 .contact-content #contact-form button:hover {
-  background-color: #f35525;
+  background-color: #C8AA62;
 }
 
 
@@ -1488,7 +1560,7 @@ footer.footer-no-gap {
 
 footer {
   margin-top: 150px;
-  background-color: #1e1e1e;
+  background-color: #10344D;;
   min-height: 100px;
 }
 
@@ -1581,7 +1653,7 @@ Properties Style
 }
 
 .properties ul.properties-filter li a.is_active {
-  background-color: #f35525;
+  background-color: #C8AA62;
   color: #fff;
 }
 
@@ -1590,7 +1662,7 @@ Properties Style
 }
 
 .properties ul.properties-filter li a:hover {
-  color: #f35525;
+  color: #C8AA62;
 }
 
 .properties ul.pagination {
@@ -1621,7 +1693,7 @@ Properties Style
 
 .properties ul.pagination li a:hover,
 .properties ul.pagination li a.is_active {
-  background-color: #f35525;
+  background-color: #C8AA62;
   color: #fff;
 }
 
@@ -1678,7 +1750,7 @@ Single Page Style
 }
 
 .single-property .accordion-button:not(.collapsed) {
-  color: #f35525;
+  color: #C8AA62;
   background-color: #fafafa;
   outline: none;
 }
@@ -1832,7 +1904,7 @@ Contact Page Style
 }
 
 .contact-page #contact-form button:hover {
-  background-color: #f35525;
+  background-color: #C8AA62;
 }
 
 
@@ -2001,7 +2073,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 51, 122, 0.5); /* faint dark overlay */
+  background: rgba(16, 52, 77, 0.7);
+ /* faint dark overlay */
   z-index: 2;
 }
 
@@ -2013,7 +2086,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  color: rgb(0, 67, 93);
+  color: #10344D;
   width: 100%;
   padding: 0 20px;
 }
@@ -2107,7 +2180,7 @@ body {
 
 .story-text h2 {
   font-size: 2.5rem;
-  color: #001f4d;
+  color: #10344D;
   margin-bottom: 20px;
 }
 
@@ -2158,8 +2231,8 @@ body {
 .mvc-block {
   flex: 1 1 300px;
   background-color: #ffffff;
-  border: 2px solid #001f4d;
-  border-left: 8px solid gold;
+  border: 2px solid #10344D;
+  border-left: 8px solid #C8AA62;
   padding: 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
@@ -2168,7 +2241,7 @@ body {
 
 .mvc-block h3 {
   font-size: 1.8rem;
-  color: #001f4d;
+  color: #10344D;
   margin-bottom: 15px;
 }
 
